// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/Typography Caption should match Snapshot 1`] = `
<div
  className="jsx-4247411757 jsx-3754337244"
  style={Object {}}
>
  Caption
</div>
`;

exports[`component/Typography SubHeading1 should match Snapshot 1`] = `
<div
  className="jsx-4247411757 jsx-482228210"
  style={Object {}}
>
  SubHeading1
</div>
`;

exports[`component/Typography Title should match Snapshot 1`] = `
<div
  className="jsx-4247411757 jsx-873826105"
  style={Object {}}
>
  Title
</div>
`;
